# ncbs-moose

./: .gitignore  README.md  sync_ncbs_svn.sh  tags
moose/branches/async_multiscale_cmake/: CMakeLists.txt  Cythonize.sh  Makefile.old  NOTES  NOTES.dilawar  RunMumble.sh  merge_async13.sh
moose/branches/async_multiscale_cmake/DilawarNotes/: Compile.txt
moose/branches/async_multiscale_cmake/Docs/: README.txt
moose/branches/async_multiscale_cmake/basecode/: AnyDimGlobalHandler.cpp  CMakeLists.txt  Cinfo.cpp  Cinfo.h  DataElement.h  Dinfo.h  Element.cpp  Element.h  EpFunc.h  Eref.h  FieldElementFinfo.h  Finfo.cpp  Finfo.h  Ftype.h  Id.h  ObjId.cpp  ObjId.h  OpFunc.h  OpFuncBase.h  Qinfo.h  SetGet.cpp  SetGet.h  SrcFinfo.cpp  SrcFinfo.h  UpFunc.h  ValueFinfo.h  declarations.h  header.h  main.cpp  testAsync.cpp
moose/branches/async_multiscale_cmake/biophysics/: CMakeLists.txt  ChanBase.cpp  Compartment.h  HHChannel.h  Makefile  testBiophysics.cpp
moose/branches/async_multiscale_cmake/buildMooseUsingCmake/: build_me.sh
moose/branches/async_multiscale_cmake/builtins/: CMakeLists.txt  Table.cpp  Table.h  testBuiltins.cpp
moose/branches/async_multiscale_cmake/cmake_modules/: FindLIBSBML.cmake  FindNumpyHeaders.cmake
moose/branches/async_multiscale_cmake/cymoose/: Compartment.pxd  Compartment.pyx  Eref.pxd  Id.pxd  Makefile  Neutral.pxd  Neutral.pyx  ObjId.pxd  ObjId.pyx  PyId.pyx  PyObjId.pyx  PyShell.pyx  Shell.pxd  Shell.pyx  cymoose.cpp  cymoose.pyx  cython_header.hpp  main_cython.hpp  run.sh  setup.py  test.py
moose/branches/async_multiscale_cmake/cython/: Makefile  _pymoose.pyx  basecode_Id.pxd  main_cython.hpp  pymoose.pyx  setup.py  test.py
moose/branches/async_multiscale_cmake/device/: PulseGen.cpp
moose/branches/async_multiscale_cmake/diffusion/: CMakeLists.txt  DiffPoolVec.cpp  Dsolve.h  fastElim.cpp
moose/branches/async_multiscale_cmake/examples/: Ex.h
moose/branches/async_multiscale_cmake/gsl/: CMakeLists.txt
moose/branches/async_multiscale_cmake/hsolve/: CMakeLists.txt  CTestTestfile.cmake  Cell.cpp  HSolve.cpp  HSolve.h  HSolveActive.cpp  HSolveActive.h  HSolveActiveSetup.cpp  HSolveHub.cpp  HSolveHub.h  HSolvePassive.cpp  HSolveUtils.cpp  HSolveUtils.h  HinesMatrix.cpp  Makefile  ZombieCaConc.cpp  ZombieCaConc.h  ZombieCompartment.cpp  ZombieCompartment.h  ZombieHHChannel.h  cmake_install.cmake  testHSolve.cpp
moose/branches/async_multiscale_cmake/kinetics/: CMakeLists.txt  Reac.h  ReadKkit.cpp
moose/branches/async_multiscale_cmake/ksolve/: CMakeLists.txt  KinSparseMatrix.cpp  Ksolve.cpp  Ksolve.h  RateTerm.cpp  RateTerm.h  Stoich.cpp  VoxelPools.cpp  VoxelPools.h  VoxelPoolsBase.cpp  VoxelPoolsBase.h  ZombiePool.cpp  ZombiePoolInterface.h  ZombieReac.cpp
moose/branches/async_multiscale_cmake/mesh/: CMakeLists.txt
moose/branches/async_multiscale_cmake/msg/: DiagonalMsg.h  Msg.cpp  Msg.h  OneToAllMsg.h  OneToOneMsg.cpp  SingleMsg.h  SparseMsg.cpp  SparseMsg.h
moose/branches/async_multiscale_cmake/pymoose/: CMakeLists.txt  melement.cpp  mfield.cpp  moosemodule.cpp  moosemodule.h  vec.cpp
packaging/: .gitmodules  CMakeLists.txt  INSTALL  Readme.dependencies  UbuntuLiveCD_customization.txt  build_and_test.sh  packages_local.sh  using_liveUSB.txt
packaging/debian/: changelog  control  copy_moose_install_files  copyright  deb_create_instructions.txt  moose-core.install  moose-gui.install  moose-moogli.install  moose-moogli.postinst  moose-moogli.prerm  moose-python.install  moose-python.postinst  moose-python.prerm  moose.install  moose.install.ex  postinst  prerm  rules
packaging/debian-scripts/: postinst  prerm
packaging/debian/DEBIAN/: control  postinst  prerm
packaging/docs/: UbuntuLiveCD_customization.txt
packaging/moose_3.0.0/: CMakeLists.txt
packaging/moose_3.0.0/debian/: changelog  control  moose-gui.install  moose-python.prerm  rules
packaging/moose_3.0.0/scripts/: moose
packaging/moose_3.0.1/: CMakeLists.txt  Doxyfile  Makefile
packaging/moose_3.0.1/basecode/: CMakeLists.txt  Makefile  main.cpp
packaging/moose_3.0.1/benchmarks/: Makefile
packaging/moose_3.0.1/biophysics/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/builtins/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/device/: Makefile
packaging/moose_3.0.1/diffusion/: Makefile
packaging/moose_3.0.1/examples/: Ex.cpp
packaging/moose_3.0.1/gui/: config.py
packaging/moose_3.0.1/hsolve/: Makefile
packaging/moose_3.0.1/intfire/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/kinetics/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/ksolve/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/mesh/: Makefile
packaging/moose_3.0.1/mpi/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/msg/: Makefile
packaging/moose_3.0.1/pymoose/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/python/: setup-moogli.py  setup.py
packaging/moose_3.0.1/randnum/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/sbml/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/scheduling/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/scripts/: build_debian_locally_on_ubuntu.sh  moose.desktop
packaging/moose_3.0.1/shell/: Makefile
packaging/moose_3.0.1/signeur/: Makefile
packaging/moose_3.0.1/synapse/: CMakeLists.txt  Makefile
packaging/moose_3.0.1/utility/: Makefile
packaging/open_build_service/.osc/: _packages
packaging/open_build_service/moose/: READEME  _service  build.sh  build_packages.py  debian.control  generate_spec.py  moose-CentOS_5.spec  moose-CentOS_6.spec  moose-Fedora_19.spec  moose-RHEL_6.spec  moose-ScientificLinux_6.spec  moose-ScientificLinux_7.spec  moose.dsc  moose.spec  moose.spec.template
packaging/packaging_scripts/: cmake_sanity_check.py  packages_local.sh  packages_local_using_cmake.sh
packaging/rpm-scripts/: postinst  prerm
packaging/windows/nsis-package/: ConfirmAdmin.nsh  convert-endline.sh  copyleft.txt  isUserAdmin.nsh  launcher.bat  moose.py  moose_installer.nsi  moose_installer_beta.nsi
packaging/windows/nsis-test/: 1-read-registry.nsi  2-uninstall-if-exists.nsi  download-and-install.nsi  generic.nsi  linkexample.nsi
(+2883 files in other folders)
